--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,8 @@
   <script src="https://ar-js-org.github.io/AR.js-Docs/"></script>
   <script src="https://aframe.io/blog/arjs"></script>
   <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.4.0/dist/aframe-extras.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
+
 </head>
 
 <body>
